--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     depends_on:
       - backend
     volumes:
-      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
